- draft version of minkowsi weighted kmeans - remove more get from getters - fix var names when creating a new frame from a template - dtable now works with indexes also - index var has labels